--- a/game/index.html
+++ b/game/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Cocos Creator | hello_world</title>
+  <title>Creatiosoft Poker</title>
 
   <!--http://www.html5rocks.com/en/mobile/mobifying/-->
   <meta name="viewport"
@@ -27,8 +27,8 @@
   <meta name="360-fullscreen" content="true"/>
   
   <!-- force screen orientation on some browser -->
-  <meta name="screen-orientation" content="landscape"/>
-  <meta name="x5-orientation" content="landscape">
+  <meta name="screen-orientation" content="portrait"/>
+  <meta name="x5-orientation" content="portrait">
 
   <!--fix fireball/issues/3568 -->
   <!--<meta name="browsermode" content="application">-->
@@ -39,18 +39,25 @@
 
   <link rel="stylesheet" type="text/css" href="style-mobile.css"/>
   <link rel="icon" href="favicon.ico"/>
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
 </head>
-<body>
+<body onresize="onResize()" onscroll="myScroll()">
   <canvas id="GameCanvas" oncontextmenu="event.preventDefault()" tabindex="0"></canvas>
+  <div id="noportrait" style="visibility:hidden">
+  </div>
+
   <div id="splash">
     <div class="progress-bar stripes">
       <span style="width: 0%"></span>
     </div>
   </div>
+  <div id="swipeup" style="visibility:hidden"></div>
 
-<script src="src/settings.js" charset="utf-8"></script>
+<script src="screenfull.min.js?version=4.0" charset="utf-8"></script>
 
-<script src="main.js" charset="utf-8"></script>
+<script src="src/settings.js?version=4.0 charset="utf-8"></script>
+
+<script src="main.js?version=4.0 charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
